<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>storm32_gimbal_interfaces</name>
  <version>0.0.1</version>
  <description>Message definitions for the ROS2 SToRM32-Gimbal-Controller.</description>
  <maintainer email="fabian.domberg@student.uni-luebeck.de">Fabian Domberg</maintainer>
  <license>GNU General Public License v2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
